@@ -28,6 +28,7 @@ Change log next version
   There's also a shortcut for this:
     RestAssured.enableLoggingOfRequestAndResponseIfValidationFails();
   This has also been implemented in RestAssuredMockMvc (issue 212).
+* Fixed so that pretty logging of the response body doesn't change the body returned to the matchers.
 
 Change log 2.3.0 (2014-01-23)
 -----------------------------
